examples/test/testpolicy19262.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19262
  namespace: namespace88
spec:
  podSelector:
    matchLabels:
      key27: value48
      key16: value7
      key48: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value19
          key35: value5
          key27: value7
      podSelector:
        matchLabels:
          key21: value28
          key5: value17
          key39: value35
